# wazuh-agent

./: .gitignore
src/: CMakeLists.txt  vcpkg.json
src/agent/communicator/include/: communicator.hpp
src/agent/communicator/src/: communicator.cpp  http_client.cpp
src/agent/queue/: CMakeLists.txt
src/agent/queue/src/: message_queue.cpp
src/agent/queue/tests/: CMakeLists.txt  queue_test.cpp
src/agent/src/: agent.cpp
src/common/: CMakeLists.txt
src/common/data_provider/: CMakeLists.txt
src/common/debug_op/: CMakeLists.txt
src/common/debug_op/src/: debug_op.c
src/common/file_op/include/: file_op.h
src/common/file_op/src/: file_op.c
src/common/logging_helper/: CMakeLists.txt
src/common/logging_helper/include/: logging_helper.h
src/common/logging_helper/src/: logging_helper.cpp
src/common/os_xml/: CMakeLists.txt
src/common/utils/: shared.h
src/common/utils/include/: shared.h
src/modules/inventory/: CMakeLists.txt
