add_subdirectory(utils)
add_subdirectory(version_op)
add_subdirectory(time_op)
add_subdirectory(file_op)
add_subdirectory(privsep_op)
add_subdirectory(pthreads_op)
add_subdirectory(os_xml)
add_subdirectory(error_messages)
add_subdirectory(os_regex)
add_subdirectory(string_op)
add_subdirectory(debug_op)
add_subdirectory(logging_helper)
add_subdirectory(networkHelper)
add_subdirectory(data_provider)
add_subdirectory(dbsync)